seems ready for prod

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends ./header.jade
 block content
+  #loadingPage
+    h1
+      i(class='fa fa-refresh fa-spin' style="width:100%;text-align: center;")
   #content.container-fluid(style="padding-right:0px;padding-left:0px;overflow:hidden")
     #news.row.hidden
       //- SIDEMENU WIDGETS
@@ -18,7 +21,9 @@ block content
               span
                 a(v-bind:href="accountUrl")  Link
               span  to your account for other browsers
-            <br><br><br>
+              <br><br>
+              a(href="#" v-on:click="createNewAccount()") Create New Account
+              <br><br>
             div(style="width:100%;text-align: center;font-size: 0.7em;") Ver 0.2.1 - Please add any feedback 
               a(href="https://docs.google.com/document/d/1RsXUN85k7vbmU2VrBhYbr17s5elcvTPhGAEqNViqt8c/edit?usp=sharing") here.
       div.col-xl-10  
