--- a/views/header.jade
+++ b/views/header.jade
@@ -2,6 +2,12 @@ doctype html
 html
   head
     title NiftyKick
+    
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description', content='')
+
+    
     link(rel="icon" href="/public/img/favicon.ico" type="image/x-icon")
     link(rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
     link(rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css")
@@ -11,13 +17,26 @@ html
     //- script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
     
     style.
+      a {
+        color: #0275d8;
+      }
+      
+      a:focus, a:hover {
+        font-weight: inherit;
+        color: #0275d8;
+        text-decoration: inherit;
+      }
+    
+      .hidden {
+        visibility: hidden;
+      }
+
       body {
         font-family: Helvetica Neue,Helvetica,sans-serif;
         //- background-color: #eaeaea;
         color: #373a3c;
         width: 100%;
-        
-        width: 100%;
+        height: 100%;
         position: relative;
         //- max-width: 1060px;
         margin-left:auto;margin-right:auto;
@@ -45,7 +64,64 @@ html
         color: #E05A4A;
       }
     
-    link(rel="stylesheet" href="/public/css/main.css")
+    
+      html,
+      body {
+        overflow-x: hidden; /* Prevent scroll on narrow devices */
+      }
+      
+      @media screen and (max-width: 767px) {
+        .row-offcanvas {
+          position: relative;
+          -webkit-transition: all .25s ease-out;
+               -o-transition: all .25s ease-out;
+                  transition: all .25s ease-out;
+        }
+      
+        .row-offcanvas-right {
+          right: 0;
+        }
+      
+        .row-offcanvas-left {
+          left: 0;
+        }
+      
+        .row-offcanvas-right
+        .sidebar-offcanvas {
+          right: -100%; /* 12 columns */
+        }
+      
+        .row-offcanvas-right.active
+        .sidebar-offcanvas {
+          right: -70%; /* 6 columns */
+        }
+      
+        .row-offcanvas-left
+        .sidebar-offcanvas {
+          left: -100%; /* 12 columns */
+        }
+      
+        .row-offcanvas-left.active
+        .sidebar-offcanvas {
+          left: -70%; /* 6 columns */
+        }
+      
+        .row-offcanvas-right.active {
+          right: 70%; /* 6 columns */
+        }
+      
+        .row-offcanvas-left.active {
+          left: 70%; /* 6 columns */
+        }
+      
+        .sidebar-offcanvas {
+          position: absolute;
+          top: 0;
+          width: 70%; /* 6 columns */
+        }
+      }
+
+    //- link(rel="stylesheet" href="/public/css/main.css")
   body
     #app
       #top-menu
