--- a/views/header.jade
+++ b/views/header.jade
@@ -12,8 +12,6 @@ html
     link(rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css")
     link(rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css")
     link(rel="stylesheet" href="/bower_components/awesomplete/awesomplete.css")
-    
-    //- link(rel="stylesheet" href="/public/css/main.css")
     //- script(src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
     
     style.
@@ -34,7 +32,7 @@ html
       body {
         font-family: Helvetica Neue,Helvetica,sans-serif;
         //- background-color: #eaeaea;
-        color: #373a3c;
+        //- color: #373a3c;
         width: 100%;
         height: 100%;
         position: relative;
@@ -63,8 +61,7 @@ html
       .activeText {
         color: #E05A4A;
       }
-    
-    
+      
       html,
       body {
         overflow-x: hidden; /* Prevent scroll on narrow devices */
@@ -121,7 +118,7 @@ html
         }
       }
 
-    //- link(rel="stylesheet" href="/public/css/main.css")
+    link(rel="stylesheet" href="/public/css/main.css")
   body
     #app
       #top-menu
