vr video from iframe (SO HYPE)

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
               span(class="label label-default label-pill pull-right" v-bind:class="{ activeNum: selectedWidget == widget }" v-html="widget.notification")
             li.btn.list-group-item(id="config" v-on:click="configClicked()" style="text-align: inherit;")
               span
-                i.fa.fa-gears
+                i.fa.fa-gear
               span(v-if="displayConfig")  Hide Settings
               span(v-else)  Settings
             div
