--- a/views/niftyWorldEditor.jade
+++ b/views/niftyWorldEditor.jade
@@ -11,6 +11,8 @@ html
       #container {
         display: flex;
       }
-  body
+  body(id="bod")
+    iframe(id="frame" src="https://www.youtube.com/embed/uVuBqTQTqRQ" height="200" width="300")
+    button(id="btn")
     #container
     script(src="/browserify/niftyWorld/niftyWorldEditor.js")
