--- a/views/niftyWorldEditor.jade
+++ b/views/niftyWorldEditor.jade
@@ -12,7 +12,8 @@ html
         display: flex;
       }
   body(id="bod")
-    iframe(id="frame" src="https://www.youtube.com/embed/uVuBqTQTqRQ" height="200" width="300")
-    button(id="btn")
+    #player(style="width:1px;height:1px")
+    //- iframe(id="frame" src="https://www.youtube.com/embed/uVuBqTQTqRQ" height="200" width="300")
+    //- button(id="btn")
     #container
     script(src="/browserify/niftyWorld/niftyWorldEditor.js")
