--- a/views/header.jade
+++ b/views/header.jade
@@ -118,12 +118,13 @@ html
         }
       }
 
-    link(rel="stylesheet" href="/public/css/main.css")
+    link(rel="stylesheet" href="/public/css/mainLight.css")
   body
     #app
       #top-menu
         #title(style="text-align:center;")
-          h1(style="font-weight: bold;") NIFTYKICK 🔥 💯 😂
+          //- img(src="/public/img/logo.png" width="100px")
+          h1(style="font-weight: bold;") NIFTYKICK 🔥
           p.hidden {{topMsg}}
         #menu(style="text-align:center;")
           a.menu-btn(href="/") News
