--- a/views/header.jade
+++ b/views/header.jade
@@ -121,7 +121,7 @@ html
     link(rel="stylesheet" href="/public/css/mainLight.css")
   body
     #app
-      #top-menu
+      #top-menu(style="padding-top:10px;")
         #title(style="text-align:center;")
           //- img(src="/public/img/logo.png" width="100px")
           h1(style="font-weight: bold;") NIFTYKICK 🔥
