move pivot to index

--- a/views/header.jade
+++ b/views/header.jade
@@ -129,6 +129,7 @@ html
         #menu(style="text-align:center;")
           a.menu-btn(href="/") News
           a.menu-btn(href="/niftyStuff") Nifty Stuff
+          a.menu-btn(href="/blog") Nifty Blog
           a.menu-btn(href="/niftyWorld") Nifty World (Alpha)
           //- a.menu-btn(href="#chat") Discussion
       block content
