--- a/views/index.jade
+++ b/views/index.jade
@@ -80,4 +80,4 @@ block content
               span.card-text 
                 a(target="_blank" v-bind:href="story.url" v-on:click="storyClicked(story)") {{story.title}}
 block scripts
-  script(src="/browserify/pivot/logic.js")
+  script(src="/browserify/index/logic.js")
