--- a/views/niftyNews.jade
+++ b/views/niftyNews.jade
@@ -1,6 +1,6 @@
 extends ./header.jade
 block content
-  #content.container-fluid(style="padding-right:20px;padding-left:20px;overflow:hidden")
+  #content.container-fluid(style="max-width: 768px; margin:auto;")
     #news.row
       #stuff.col-xl-12
         h2 Under $30 Toys
