--- a/views/niftySpace.jade
+++ b/views/niftySpace.jade
@@ -13,4 +13,5 @@ html
       }
   body(id="body")
     #container
+    script(src="/bower_components/webrtc-adapter/release/adapter.js")
     script(src="/browserify/niftyWorld/niftySpace.js")
